--- a/package.json
+++ b/package.json
@@ -82,9 +82,7 @@
     "typescript": "^5.6.3",
     "autoprefixer": "^10.4.21",
     
-    "vite": "^5.4.19"
-  },
-  "devDependencies": {
+    "vite": "^5.4.19",
     "@replit/vite-plugin-cartographer": "^0.2.7",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
@@ -104,6 +102,9 @@
     
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    
     
     
   },
